src/common-plant-page.css
@import "camera.css";

.scientific-name {
  font-style: italic;
}

section.tags {
  margin: 0 calc(2*var(--spacing));
  margin-bottom: calc(2*var(--spacing));
  padding: calc(2*var(--spacing));
  padding-bottom: 0;
  background-color: var(--bg-table-stripe-odd);

  ul {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
  }

  & .tag {
    padding: calc(1*var(--spacing));
    margin-bottom: calc(2*var(--spacing));
    border-radius: var(--spacing);
    background-color: var(--primary-light);
    color: var(--fg-dark);
    display: flex;
    list-style-type: none;

    &:not(:last-child) {
      margin-right: calc(1*var(--spacing));
    }

    & > :not(:last-child) {
      margin-right: 0.25em;
    }
  }

  & button.tag {
    border: none;
    color: var(--fg-dark);
  }

  & a {
    color: white;
  }

  & .tag-tooltip {
    display: none;
    padding: calc(2*var(--spacing));
    margin: calc(-2*var(--spacing));
    margin-top: calc(2*var(--spacing));
    background-color: var(--primary-lighter);

    & svg {
      margin-right: 0.25em;
    }
  }

  &:has(button.tag:focus) .tag-tooltip {
    display: flex;
  }
}

section.links {
  margin: 0 calc(2*var(--spacing));
  margin-bottom: calc(2*var(--spacing));

  & a {
    display: block;
    color: var(--fg);
    padding: calc(2*var(--spacing));

    &:nth-child(odd) {
      background-color: var(--bg-table-stripe-odd);
    }
    &:nth-child(even) {
      background-color: var(--bg-table-stripe-even);
    }
  }
}

section.photos {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  margin: 0 calc(2*var(--spacing));
  margin-bottom: calc(2*var(--spacing));

  & nav {
    display: flex;
    width: 100%;
    justify-content: flex-start;
    margin-top: calc(-1*var(--spacing));
    margin-left: calc(-2*var(--spacing));
    margin-bottom: calc(1*var(--spacing));

    & input[type=radio] {
      display: none;
    }

    & label {
      background-color: var(--primary-light);
      margin: calc(1*var(--spacing));
      padding: calc(1*var(--spacing));
      cursor: pointer;
    }

    & label:has(input[type=radio]:checked) {
      background-color: var(--primary-lighter);
      color: var(--fg-light);
      font-weight: bold;
    }
  }

  &:has(label:nth-of-type(1) [type="radio"]:checked) ul:nth-of-type(1) { display: flex; }
  &:has(label:nth-of-type(2) [type="radio"]:checked) ul:nth-of-type(2) { display: flex; }
  &:has(label:nth-of-type(3) [type="radio"]:checked) ul:nth-of-type(3) { display: flex; }
  &:has(label:nth-of-type(4) [type="radio"]:checked) ul:nth-of-type(4) { display: flex; }
  &:has(label:nth-of-type(5) [type="radio"]:checked) ul:nth-of-type(5) { display: flex; }

  & ul {
    display: none;
    /* display: flex; */
    flex-direction: row;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    overscroll-behavior-x: contain;
  }

  & li {
    width: 100%;
    scroll-snap-align: center;
    flex-shrink: 0;
    position: relative;
  }

  & img {
    width: 100%;
    object-fit: cover;
  }

  & .counter {
    position: absolute;
    top: 0;
    left: 0;
    margin: calc(2*var(--spacing));
    padding: calc(2*var(--spacing));
    background-color: rgba(0, 0, 0, 0.8);
    color: var(--fg-dark);
    display: flex;
    flex-direction: column;
  }

  & .date {
    position: absolute;
    top: 0;
    right: 0;
    margin: calc(2*var(--spacing));
    padding: calc(2*var(--spacing));
    background-color: rgba(0, 0, 0, 0.8);
    color: var(--fg-dark);
  }

  & .tags {
    position: absolute;
    bottom: 0;
    right: 0;
    margin: calc(2*var(--spacing));
    padding: calc(2*var(--spacing));
    background-color: rgba(0, 0, 0, 0.8);
    color: var(--fg-dark);
  }

  & button.delete {
    margin-top: calc(2*var(--spacing));
    padding: calc(2*var(--spacing));
    background-color: var(--bg-primary);
    color: var(--fg-dark);
  }

  &:has(.no-photos-placeholder) {
    min-height: calc(72*var(--spacing));
  }

  & .no-photos-placeholder {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

section.description {
  margin: 0 calc(2*var(--spacing));
  margin-bottom: calc(2*var(--spacing));
  padding: calc(2*var(--spacing));
  background-color: var(--bg-table-stripe-odd);
}

